--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/splash-screen": "4.3.3",
     "@ionic-native/status-bar": "4.3.3",
     "@ionic/storage": "2.1.1",
+    "@types/lokijs": "^1.2.30",
     "cordova-sqlite-storage": "^2.1.2",
     "ionic-angular": "3.8.0",
     "ionicons": "3.0.0",
