--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@angular/http": "4.4.4",
     "@angular/platform-browser": "4.4.4",
     "@angular/platform-browser-dynamic": "4.4.4",
+    "@ionic-native/camera": "^4.4.2",
     "@ionic-native/core": "4.3.3",
     "@ionic-native/splash-screen": "4.3.3",
     "@ionic-native/status-bar": "4.3.3",
     "@ionic/storage": "2.1.1",
     "@types/lokijs": "^1.2.30",
+    "cordova-plugin-camera": "^3.0.0",
     "cordova-sqlite-storage": "^2.1.2",
     "ionic-angular": "3.8.0",
     "ionicons": "3.0.0",
@@ -39,7 +41,8 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-camera": {}
     }
   }
 }
