--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "amaranthus",
-  "version": "0.7.9",
+  "version": "0.9.0",
   "author": "Esteban Morales",
   "private": true,
   "scripts": {
@@ -25,9 +25,17 @@
     "@ionic-native/status-bar": "4.3.3",
     "@ionic/storage": "2.1.1",
     "@types/lokijs": "^1.2.30",
+    "cordova": "^7.1.0",
+    "cordova-android": "6.3.0",
     "cordova-plugin-camera": "^3.0.0",
+    "cordova-plugin-device": "1.1.4",
+    "cordova-plugin-ionic-webview": "^1.1.11",
+    "cordova-plugin-splashscreen": "~4.0.1",
+    "cordova-plugin-whitelist": "1.3.1",
     "cordova-sqlite-storage": "^2.1.2",
+    "ionic": "^3.19.0",
     "ionic-angular": "3.8.0",
+    "ionic-plugin-keyboard": "~2.2.1",
     "ionicons": "3.0.0",
     "lokijs": "^1.5.1",
     "rxjs": "5.4.3",
@@ -38,11 +46,18 @@
     "@ionic/app-scripts": "3.0.1",
     "typescript": "2.3.4"
   },
-  "description": "An Ionic project",
   "cordova": {
     "plugins": {
       "cordova-sqlite-storage": {},
-      "cordova-plugin-camera": {}
-    }
+      "cordova-plugin-camera": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
