--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,7 @@ $RECYCLE.BIN/
 .DS_Store
 Thumbs.db
 UserInterfaceState.xcuserstate
+
+amaranthus-key.jks
+amaranthus-password.txt
+attendancebook.apk
