--- a/package.json
+++ b/package.json
@@ -28,19 +28,20 @@
     "cordova": "^7.1.0",
     "cordova-android": "6.3.0",
     "cordova-plugin-camera": "^3.0.0",
-    "cordova-plugin-device": "1.1.4",
-    "cordova-plugin-ionic-webview": "^1.1.11",
-    "cordova-plugin-splashscreen": "~4.0.1",
-    "cordova-plugin-whitelist": "1.3.1",
-    "cordova-sqlite-storage": "^2.1.2",
+    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-whitelist": "^1.3.1",
+    "cordova-sqlite-storage": "^2.2.0",
     "ionic": "^3.19.0",
     "ionic-angular": "3.8.0",
-    "ionic-plugin-keyboard": "~2.2.1",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "lokijs": "^1.5.1",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18"
+    "zone.js": "0.8.18",
+    "cordova-ios": "~4.5.4"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.1",
@@ -57,7 +58,8 @@
       "cordova-plugin-ionic-webview": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
