--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@ionic/storage": "2.1.1",
     "@types/lokijs": "^1.2.30",
     "cordova": "^7.1.0",
-    "cordova-android": "6.3.0",
     "cordova-plugin-camera": "^3.0.0",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-ionic-webview": "^1.1.16",
@@ -41,7 +40,8 @@
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18",
-    "cordova-ios": "~4.5.4"
+    "cordova-ios": "~4.5.4",
+    "cordova-android": "~6.3.0"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.1",
@@ -58,8 +58,8 @@
       "cordova-plugin-ionic-webview": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
