--- a/package.json
+++ b/package.json
@@ -21,16 +21,20 @@
     "@angular/platform-browser-dynamic": "4.4.4",
     "@ionic-native/camera": "^4.4.2",
     "@ionic-native/core": "4.3.3",
+    "@ionic-native/file": "4.5.2",
     "@ionic-native/splash-screen": "4.3.3",
     "@ionic-native/status-bar": "4.3.3",
     "@ionic/storage": "2.1.1",
-    "@types/lokijs": "^1.2.30",
     "cordova": "^7.1.0",
-    "cordova-plugin-camera": "^3.0.0",
-    "cordova-plugin-device": "^1.1.4",
+    "cordova-android": "~6.3.0",
+    "cordova-ios": "~4.5.4",
+    "cordova-plugin-camera": "^4.0.1",
+    "cordova-plugin-device": "^2.0.1",
+    "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-ionic-webview": "^1.1.16",
-    "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-whitelist": "^1.3.1",
+    "cordova-plugin-splashscreen": "^5.0.1",
+    "cordova-plugin-statusbar": "^2.4.1",
+    "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.2.0",
     "ionic": "^3.19.0",
     "ionic-angular": "3.8.0",
@@ -39,13 +43,12 @@
     "lokijs": "^1.5.1",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "cordova-ios": "~4.5.4",
-    "cordova-android": "~6.3.0"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.1",
-    "typescript": "2.3.4"
+    "typescript": "2.3.4",
+    "@types/lokijs": "^1.5.0"
   },
   "cordova": {
     "plugins": {
@@ -55,7 +58,9 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-statusbar": {}
     },
     "platforms": [
       "ios",
