--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ UserInterfaceState.xcuserstate
 amaranthus-key.jks
 amaranthus-password.txt
 attendancelog.apk
+android-release-unsigned.apk
+android-debug.apk
