--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/file": "4.5.2",
     "@ionic-native/splash-screen": "4.3.3",
     "@ionic-native/status-bar": "4.3.3",
+    "@ionic-native/in-app-purchase": "4.5.2",
     "@ionic/storage": "2.1.1",
     "cordova": "^7.1.0",
     "cordova-android": "~6.3.0",
