--- a/package.json
+++ b/package.json
@@ -11,24 +11,21 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "4.4.4",
-    "@angular/compiler": "4.4.4",
-    "@angular/compiler-cli": "4.4.4",
-    "@angular/core": "4.4.4",
-    "@angular/forms": "4.4.4",
-    "@angular/http": "4.4.4",
-    "@angular/platform-browser": "4.4.4",
-    "@angular/platform-browser-dynamic": "4.4.4",
+    "@angular/common": "5.0.0",
+    "@angular/compiler": "5.0.0",
+    "@angular/compiler-cli": "5.0.0",
+    "@angular/core": "5.0.0",
+    "@angular/forms": "5.0.0",
+    "@angular/http": "5.0.0",
+    "@angular/platform-browser": "5.0.0",
+    "@angular/platform-browser-dynamic": "5.0.0",
     "@ionic-native/camera": "^4.4.2",
-    "@ionic-native/core": "4.3.3",
+    "@ionic-native/core": "^4.3.3",
     "@ionic-native/file": "4.5.2",
+    "@ionic-native/in-app-purchase": "4.5.2",
     "@ionic-native/splash-screen": "4.3.3",
     "@ionic-native/status-bar": "4.3.3",
-    "@ionic-native/in-app-purchase": "4.5.2",
     "@ionic/storage": "2.1.1",
-    "cordova": "^7.1.0",
-    "cordova-android": "~6.3.0",
-    "cordova-ios": "~4.5.4",
     "cordova-plugin-camera": "^4.0.1",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-file": "^6.0.1",
@@ -38,9 +35,7 @@
     "cordova-plugin-statusbar": "^2.4.1",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.2.0",
-    "ionic": "^3.19.0",
-    "ionic-angular": "3.8.0",
-    "ionic-plugin-keyboard": "^2.2.1",
+    "ionic-angular": "^3.9.2",
     "ionicons": "3.0.0",
     "lokijs": "^1.5.1",
     "rxjs": "5.4.3",
@@ -56,7 +51,6 @@
     "plugins": {
       "cordova-sqlite-storage": {},
       "cordova-plugin-camera": {},
-      "ionic-plugin-keyboard": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
@@ -65,9 +59,6 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-inapppurchase": {}
     },
-    "platforms": [
-      "ios",
-      "android"
-    ]
+    "platforms": []
   }
 }
