--- a/package.json
+++ b/package.json
@@ -11,39 +11,42 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "5.0.0",
-    "@angular/compiler": "5.0.0",
-    "@angular/compiler-cli": "5.0.0",
-    "@angular/core": "5.0.0",
-    "@angular/forms": "5.0.0",
-    "@angular/http": "5.0.0",
-    "@angular/platform-browser": "5.0.0",
-    "@angular/platform-browser-dynamic": "5.0.0",
+    "@angular/common": "5.0.3",
+    "@angular/compiler": "5.0.3",
+    "@angular/compiler-cli": "5.0.3",
+    "@angular/core": "5.0.3",
+    "@angular/forms": "5.0.3",
+    "@angular/http": "5.0.3",
+    "@angular/platform-browser": "5.0.3",
+    "@angular/platform-browser-dynamic": "5.0.3",
     "@ionic-native/camera": "^4.4.2",
-    "@ionic-native/core": "^4.3.3",
+    "@ionic-native/core": "4.4.0",
     "@ionic-native/file": "4.5.2",
     "@ionic-native/in-app-purchase": "4.5.2",
-    "@ionic-native/splash-screen": "4.3.3",
-    "@ionic-native/status-bar": "4.3.3",
-    "@ionic/storage": "2.1.1",
+    "@ionic-native/splash-screen": "4.4.0",
+    "@ionic-native/status-bar": "4.4.0",
+    "@ionic/storage": "2.1.3",
+    "cordova-android": "7.0.0",
+    "cordova-ios": "4.5.4",
     "cordova-plugin-camera": "^4.0.1",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-inapppurchase": "^1.2.0",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^5.0.1",
     "cordova-plugin-statusbar": "^2.4.1",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.2.0",
-    "ionic-angular": "^3.9.2",
+    "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "lokijs": "^1.5.1",
-    "rxjs": "5.5.0",
+    "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.0.1",
+    "@ionic/app-scripts": "3.1.6",
     "typescript": "2.4.2",
     "@types/lokijs": "^1.5.0"
   },
@@ -57,8 +60,12 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-file": {},
       "cordova-plugin-statusbar": {},
-      "cordova-plugin-inapppurchase": {}
+      "cordova-plugin-inapppurchase": {},
+      "cordova-plugin-ionic-keyboard": {}
     },
-    "platforms": []
+    "platforms": [
+      "ios",
+      "android"
+    ]
   }
 }
