--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
     "cordova-android": "7.0.0",
-    "cordova-ios": "4.5.4",
     "cordova-plugin-camera": "^4.0.1",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-file": "^6.0.1",
@@ -41,12 +40,13 @@
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "lokijs": "^1.5.1",
+    "platform": "1.3.4",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.6",
+    "@ionic/app-scripts": "3.1.8",
     "typescript": "2.4.2",
     "@types/lokijs": "^1.5.0"
   },
@@ -60,11 +60,9 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-file": {},
       "cordova-plugin-statusbar": {},
-      "cordova-plugin-inapppurchase": {},
       "cordova-plugin-ionic-keyboard": {}
     },
     "platforms": [
-      "ios",
       "android"
     ]
   }
