--- a/.gitignore
+++ b/.gitignore
@@ -37,5 +37,5 @@ UserInterfaceState.xcuserstate
 amaranthus-key.jks
 amaranthus-password.txt
 attendancelog.apk
-android-release-unsigned.apk
+app-release-unsigned.apk
 android-debug.apk
