--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cordova-android": "7.0.0",
     "cordova-plugin-camera": "^4.0.1",
     "cordova-plugin-device": "^2.0.1",
+    "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^5.0.1",
@@ -45,9 +46,9 @@
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.8",
-    "typescript": "2.4.2",
-    "@types/lokijs": "^1.5.0"
+    "@ionic/app-scripts": "^3.1.8",
+    "@types/lokijs": "^1.5.0",
+    "typescript": "2.4.2"
   },
   "cordova": {
     "plugins": {
@@ -58,7 +59,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-statusbar": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-file": {}
     },
     "platforms": [
       "android"
