--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "platform": "1.3.4",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
+    "xlsx": "^0.12.1",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
