--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@ionic-native/camera": "^4.4.2",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/file": "^4.5.3",
-    "@ionic-native/in-app-purchase-2": "^4.5.2",
+    "@ionic-native/in-app-purchase": "^4.5.3",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
@@ -30,6 +30,7 @@
     "cordova-plugin-camera": "^4.0.1",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-inapppurchase": "^1.2.0",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^5.0.1",
@@ -61,7 +62,8 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-file": {}
+      "cordova-plugin-file": {},
+      "cordova-plugin-inapppurchase": {}
     },
     "platforms": [
       "android"
