--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "^2.1.3",
     "cordova-android": "7.0.0",
+    "cordova-ios": "4.5.4",
     "cordova-plugin-camera": "^4.0.2",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-file": "^6.0.1",
@@ -65,7 +66,8 @@
       "cordova-plugin-inapppurchase": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
