--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "5.0.3",
     "@ionic-native/camera": "^4.4.2",
     "@ionic-native/core": "4.4.0",
+    "@ionic-native/email-composer": "^4.8.0",
     "@ionic-native/file": "^4.5.3",
     "@ionic-native/file-opener": "^4.7.0",
     "@ionic-native/in-app-purchase": "^4.5.3",
@@ -29,9 +30,11 @@
     "@ionic/storage": "^2.1.3",
     "cordova-android": "7.0.0",
     "cordova-android-support-gradle-release": "^1.3.0",
+    "cordova-browser": "5.0.3",
     "cordova-ios": "4.5.4",
     "cordova-plugin-camera": "^4.0.2",
     "cordova-plugin-device": "^2.0.1",
+    "cordova-plugin-email-composer": "^0.8.15",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-opener2": "^2.0.19",
     "cordova-plugin-inapppurchase": "^1.2.0",
@@ -70,11 +73,13 @@
       "cordova-plugin-file-opener2": {},
       "cordova-android-support-gradle-release": {
         "ANDROID_SUPPORT_VERSION": "27.+"
-      }
+      },
+      "cordova-plugin-email-composer": {}
     },
     "platforms": [
       "ios",
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
