--- a/package.json
+++ b/package.json
@@ -28,10 +28,9 @@
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "^2.1.3",
-    "cordova-android": "7.0.0",
+    "cordova-android": "7.1.1",
     "cordova-android-support-gradle-release": "^1.3.0",
-    "cordova-browser": "5.0.3",
-    "cordova-ios": "4.5.4",
+    "cordova-ios": "^4.5.4",
     "cordova-plugin-camera": "^4.0.2",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-email-composer": "^0.8.15",
@@ -78,8 +77,7 @@
     },
     "platforms": [
       "ios",
-      "android",
-      "browser"
+      "android"
     ]
   }
 }
