--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "amaranthus",
-  "version": "0.4.4",
+  "version": "0.4.5",
   "author": "Esteban Morales",
   "private": true,
   "scripts": {
@@ -44,7 +44,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.2.1",
     "ionic-angular": "3.9.2",
-    "ionicons": "^4.2.5",
+    "ionicons": "3.0.0",
     "lokijs": "^1.5.1",
     "platform": "1.3.4",
     "rxjs": "5.5.2",
