--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/file": "^4.5.3",
     "@ionic-native/file-opener": "^4.7.0",
     "@ionic-native/in-app-purchase": "^4.5.3",
+    "@ionic-native/market": "^4.15.0",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "^2.1.3",
@@ -39,6 +40,7 @@
     "cordova-plugin-inapppurchase": "^1.2.0",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-market": "^1.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.1",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -73,7 +75,8 @@
       "cordova-android-support-gradle-release": {
         "ANDROID_SUPPORT_VERSION": "27.+"
       },
-      "cordova-plugin-email-composer": {}
+      "cordova-plugin-email-composer": {},
+      "cordova-plugin-market": {}
     },
     "platforms": [
       "ios",
