--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ionic/storage": "^2.1.3",
     "cordova-android": "7.1.1",
     "cordova-android-support-gradle-release": "^1.4.4",
+    "cordova-ios": "4.5.5",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-email-composer": "^0.8.15",
@@ -78,7 +79,8 @@
       "cordova-plugin-market": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
