--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "amaranthus",
-  "version": "0.5.1",
+  "version": "0.5.6",
   "author": "Esteban Morales",
   "private": true,
   "scripts": {
@@ -47,6 +47,7 @@
     "cordova-sqlite-storage": "^2.4.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "ios-deploy": "^1.9.4",
     "lokijs": "^1.5.5",
     "platform": "1.3.4",
     "rxjs": "5.5.2",
