--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "cordova-sqlite-storage": "^2.4.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
-    "ios-deploy": "^1.9.4",
     "lokijs": "^1.5.5",
     "platform": "1.3.4",
     "rxjs": "5.5.2",
@@ -56,7 +55,7 @@
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "^3.2.0",
+    "@ionic/app-scripts": "3.2.0",
     "@types/lokijs": "^1.5.0",
     "typescript": "2.4.2"
   },
