--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "^2.1.3",
     "cordova-android": "7.1.1",
-    "cordova-android-support-gradle-release": "^1.4.4",
+    "cordova-android-support-gradle-release": "^1.4.7",
     "cordova-ios": "4.5.5",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
@@ -40,11 +40,11 @@
     "cordova-plugin-inapppurchase": "^1.2.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^1.2.1",
-    "cordova-plugin-market": "1.2.0",
+    "cordova-plugin-market": "^1.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "^2.4.0",
+    "cordova-sqlite-storage": "^2.5.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "lokijs": "^1.5.5",
