--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "^2.1.3",
-    "cordova-android": "7.1.1",
+    "cordova-android": "7.1.4",
     "cordova-android-support-gradle-release": "^1.4.7",
     "cordova-ios": "4.5.5",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-email-composer": "^0.8.15",
     "cordova-plugin-file": "^6.0.1",
-    "cordova-plugin-file-opener2": "^2.0.19",
+    "cordova-plugin-file-opener2": "^2.1.4",
     "cordova-plugin-inapppurchase": "^1.2.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^1.2.1",
@@ -44,7 +44,7 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "^2.5.1",
+    "cordova-sqlite-storage": "^2.6.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "lokijs": "^1.5.5",
@@ -79,8 +79,8 @@
       "cordova-plugin-market": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
